--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,75 @@ h2.subtitle{
     background:rgb(109, 172, 124);
 }
 
-/*
-rgb(237, 242, 239)
-*/
+/* container2 */
+
+.main2{
+    width: 100%;
+    height: 450px;
+    background: url(../main/wedding03.jpg) no-repeat center;
+    background-size: cover;
+}
+.container2{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.hero2-logo h1{
+    margin: 0;
+    text-align: center;
+    padding-top: 350px;
+    font-family: 'Unna', serif;
+    font-size: 36px;
+    color: #fff;
+}
+
+/* whoami2 */
+
+section.whoami2{
+    margin-top: 60px;
+    background-color: #fff;
+    padding-top: 50px;
+}
+
+.leftbox2{
+    width: 50%;
+    float: left;
+    position: relative;
+}
+.pack{
+    width: 600px;
+    height: 340px;
+    margin-top: 160px;
+    background-color: rgb(237,242,239);
+}
+.rightbox2{
+    width: 50%;
+    float: left;
+    position: relative;
+}
+.rightbox2 p{
+    font-size: 17px;
+    padding-top: 50px;
+    padding-left: 30px;
+    margin-bottom: 0;
+}
+.rightbox2 .right{
+    padding-top: 0;
+    float: right;
+    margin-right: 40px;
+    padding-bottom: 20px;
+    font-size: 25px;
+}
+.dmark{
+    position: absolute;
+    left: 40%;
+    right: 60%;
+    margin-top: 130px;
+    width: 80px;
+    height: 80px;
+    z-index: 2;
+}
+.btn.btn2{
+    width: 230px;
+    font-weight: 4;
+}
