--- a/css/style.css
+++ b/css/style.css
@@ -255,3 +255,31 @@ section.whoami2{
     width: 230px;
     font-weight: 4;
 }
+.package-box{
+    width: 100%;
+    position: relative;
+}
+.package-box::after{
+    content:"";
+    display: block;
+    padding-bottom: 100%;
+}
+.inner{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.inner img{
+    width: 100%;
+    height: auto;
+}
+.packages .aurore{
+    margin-top: -30;
+    font-size: 24px;
+}
+.packages .btn{
+    margin-left: auto;
+    width: 450px;
+    margin-bottom: -150px;
+}
