--- a/css/style.css
+++ b/css/style.css
@@ -283,3 +283,40 @@ section.whoami2{
     width: 450px;
     margin-bottom: -150px;
 }
+
+/***** footer *****/
+
+footer{
+    background-color: rgb(51,51,51);
+    text-align: center;
+    color: #fff;
+}
+
+footer .container{
+    width:1200px;
+    margin: 40px auto 40px;
+}
+
+footer h1{
+    margin:0;
+    padding-top:20px;
+    font-family: 'La Belle Aurore', cursive;
+}
+footer p{
+    text-transform: uppercase;
+    font-size:12px;
+    margin:0;
+    padding-top:8px;
+    letter-spacing:1px;
+}
+
+footer a{
+    text-decoration-line:none;
+    color: #fff;
+}
+
+footer img{
+    height:100%;
+    margin-left: 10px;
+    margin-right: 10px;
+}
